[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Symbols/Images/0.png" type="Texture" id=1]
[ext_resource path="res://Objects/3D Label/OQ_UI2DLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Symbols/Symbol Poster.gd" type="Script" id=3]

[sub_resource type="Animation" id=6]
resource_name = "Visited"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Beacon/MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.772549, 0.74902 ), Color( 1, 0.443137, 0.0352941, 0.74902 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Beacon/MeshInstance2:material/0:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.490196, 0.898039, 0.992157, 0.12549 ), Color( 0.992157, 0.596078, 0.490196, 0.12549 ) ]
}

[sub_resource type="SphereShape" id=5]
radius = 8.0

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.2
bottom_radius = 0.3
height = 80.0
radial_segments = 4
rings = 8

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 0, 1, 0.772549, 0.74902 )

[sub_resource type="SphereMesh" id=3]
radius = 8.0
height = 16.0

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 0.490196, 0.898039, 0.992157, 0.12549 )

[node name="Symbol Poster" type="Spatial" groups=[
"Symbol Poster",
]]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Visited = SubResource( 6 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Poster" type="Spatial" parent="."]
visible = false

[node name="Symbol" type="Sprite3D" parent="Poster"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
billboard = 2
texture = ExtResource( 1 )

[node name="OQ_UILabel" parent="Poster" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3.5, 0 )
text = "1"
margin = 8
billboard = true
font_size_multiplier = 4.0
font_color = Color( 0, 0, 0, 1 )
background_color = Color( 1, 1, 1, 1 )

[node name="Beacon" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Beacon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 48, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Beacon"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
